# labby

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .travis.yml  Pipfile  README.md  pyproject.toml  run.py  setup.py  tdklambda.py
docs/: contributing.md
labby/: client.py  config.py  server.py  utils.py
labby/cli/: __init__.py  core.py
labby/cli/commands/: device_info.py  devices.py  hello.py  run.py  server.py  status.py  stop.py
labby/experiment/: __init__.py  runner.py  sequence.py
labby/experiment/tests/: test_sequence.py
labby/hw/: core.py
labby/hw/core/: __init__.py  exceptions.py  power_supply.py  serial.py
labby/hw/tdklambda/: README.md  power_supply.py
labby/hw/virtual/: power_supply.py
labby/server/: __init__.py  logging.py
labby/server/requests/: device_info.py  experiment_status.py  halt.py  hello.py  list_devices.py  run_sequence.py
labby/tests/: test_cli.py  test_config.py  test_experiment.py  test_server.py  test_utils.py  utils.py
labby/utils/: __init__.py  typing.py
labctl/: cli.py  config.py  experiment.py
labctl/cli/: __init__.py  core.py
labctl/cli/commands/: __init__.py  device_info.py  devices.py  hello.py  run.py
labctl/experiment/: __init__.py  runner.py  sequence.py
labctl/experiment/tests/: test_sequence.py
labctl/hw/: __init__.py  core.py
labctl/hw/tdklambda/: README.md  __init__.py  power_supply.py  psu.py
labctl/hw/virtual/: power_supply.py
labctl/tests/: test_cli.py  test_config.py  test_experiment.py  test_utils.py  utils.py
stubs/serial/: __init__.pyi
(+6 files in other folders)
